crates/stackable-versioned-macros/tests/snapshots/stackable_versioned_macros__snapshot_tests__default@generics_enum.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/tests/inputs/default/pass/generics_enum.rs
---
#[automatically_derived]
pub mod v1alpha1 {
    use super::*;
    pub enum Foo<T>
    where
        T: Default,
    {
        Bar(T),
        Baz,
    }
}
#[automatically_derived]
impl<T> ::std::convert::From<v1alpha1::Foo<T>> for v1::Foo<T>
where
    T: Default,
{
    fn from(__sv_foo: v1alpha1::Foo<T>) -> Self {
        match __sv_foo {
            v1alpha1::Foo::Bar(__sv_0) => v1::Foo::Bar(__sv_0),
            v1alpha1::Foo::Baz => v1::Foo::Baz,
        }
    }
}
#[automatically_derived]
pub mod v1 {
    use super::*;
    pub enum Foo<T>
    where
        T: Default,
    {
        Bar(T),
        Baz,
    }
}
